Nouvelle version de sentiment classification

--- a/resnet_x_ray/x-ray.ipynb
+++ b/resnet_x_ray/x-ray.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "import torch\n",
     "from tqdm import tqdm\n",
     "from torch.optim import AdamW\n",
-    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "from torch.utils.data import TensorDataset, DataLoader, random_split\n",
     "from collections import abc"
    ]
   },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +70,36 @@
    "metadata": {},
    "source": [
     "### Data tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_tensors(class_name:str, data_dir:str, size:int) :\n",
+    "    imgs = []\n",
+    "    for k in range(1,size+1) :\n",
+    "        fname = f\"{class_name}-{k}.png\"\n",
+    "        img_path = join(dataset_dir, data_dir, fname)\n",
+    "        img = cv.imread(img_path, cv.IMREAD_GRAYSCALE)\n",
+    "        imgs.append(img)\n",
+    "    data_pt = torch.from_numpy(np.asarray(imgs)).unsqueeze(1)\n",
+    "    labels_pt = torch.from_numpy(np.asarray([np.eye(4)[0] for k in range(size)]))\n",
+    "    return data_pt, labels_pt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covid_pt, covid_labels_pt = create_tensors(\"COVID\", covid_dir, covid_size)\n",
+    "assert covid_pt.shape == (covid_size,1,299,299)\n",
+    "assert covid_pt.shape[0] == covid_labels_pt.shape[0]\n",
+    "assert covid_labels_pt[1] == 4"
    ]
   },
   {
@@ -138,6 +168,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "permutation = torch.randperm()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
@@ -179,7 +218,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_16348\\1941836491.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_9660\\1941836491.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  data = torch.load(\"dataset.pt\")\n"
      ]
     }
@@ -190,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,11 +245,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampler = ."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataloader = DataLoader(train_set, batch_size=16)"
+    "train_dataloader = DataLoader(train_set, batch_size=16, sampler=sampler)"
    ]
   },
   {
@@ -335,10 +383,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inference loop"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
