FrenchSlidesQA.py devient SpanishSlidesQA.py

--- a/hf_dataset/filters.ipynb
+++ b/hf_dataset/filters.ipynb
@@ -116,45 +116,7 @@
     }
    ],
    "source": [
-    "dataset = datasets.load_dataset(\"FrenchSlidesQA.py\", trust_remote_code=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[\"Quel est l'objectif principal des ajustements ?\",\n",
-       " 'Quels sont les deux principaux processus qui ont été mis en œuvre dans un contexte donné ?',\n",
-       " \"Quel est l'objectif principal de l'apprentissage du langage, selon la slide ?\",\n",
-       " \"Quels sont les domaines d'apprentissage qui composent les normes en matière d'éducation linguistique ?\",\n",
-       " \"Quel est le niveau d'éducation auquel correspondent les élèves âgés de 8 à 9 ans ?\",\n",
-       " 'Quelles sont les compétences communicatives essentielles pour utiliser le langage de manière efficace ?',\n",
-       " 'Quels sont les deux principaux ajustements apportés aux pratiques en secondaire ?',\n",
-       " \"Quelles sont les trois étapes pour la publication d'un conte au journal scolaire ?\",\n",
-       " \"Quels sont les objectifs d'une pratique sociale du langage qui consiste à exposer les résultats d'une investigation ?\",\n",
-       " 'En deuxième année de secondaire, quelles sont les tâches que les élèves doivent réaliser en littérature ?',\n",
-       " \"Quel est l'objectif final d'un projet qui vise à développer la compréhension et l'interprétation de la poésie ?\",\n",
-       " \"Quels sont les trois domaines d'apprentissage mentionnés dans la présentation ?\",\n",
-       " 'Quelles sont les trois compétences spécifiques qui se développent lors de la réalisation de projets didactiques ?',\n",
-       " 'Quelles sont les compétences développées chez les élèves de quatrième année grâce aux projets didactiques ?',\n",
-       " 'Quelles sont les trois compétences que les élèves apprennent en cinquième année\\xa0?',\n",
-       " \"Quelles sont les activités d'apprentissage suggérées pour un élève de sixième année dans le cadre d'un cours de littérature ?\",\n",
-       " \"Quelles sont les activités d'apprentissage pour la participation sociale au deuxième grade ?\",\n",
-       " 'Quelles sont les trois compétences qui sont favorisées par le développement des projets didactiques ?',\n",
-       " \"Quelle est l'adresse email du Ministère de l'Éducation publique du Mexique ?\"]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset[\"train\"][\"questions/answers\"][0][\"question\"]"
+    "dataset = datasets.load_dataset(\"SpanishSlidesQA.py\", trust_remote_code=True)"
    ]
   },
   {
@@ -956,20 +918,6 @@
     "plt.ylabel(f\"frequency\", fontsize=13)\n",
     "plt.legend()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Filters dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
