--- a/articles/vae/vae.ipynb
+++ b/articles/vae/vae.ipynb
@@ -148,10 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "images = [Image.open(f\"image/auto/{i}.png\") for i in range(5,10)]\n",
+    "images[0].save('image/auto.gif',\n",
+    "               save_all=True, append_images=images[1:], duration=3000, loop=0)"
+   ]
   }
  ],
  "metadata": {
